<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <EditText
            android:id="@+id/txtField"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/whitetext"
            android:ems="10"
            android:textColorHint="@color/belizehole"
            android:gravity="right"
            android:hint="@string/zero"
            android:inputType="text"
            android:paddingRight="40dp"
            android:paddingTop="60dp"
            android:textColor="@color/belizehole"
            android:textSize="40sp" >

            <requestFocus />
        </EditText>
    </RelativeLayout>


    <Button
        android:id="@+id/zero"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/zero"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/one"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zero"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/one"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/two"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/one"
        android:layout_alignBottom="@+id/one"
        android:layout_toRightOf="@+id/one"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/two"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/three"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/two"
        android:layout_alignBottom="@+id/two"
        android:layout_toRightOf="@+id/two"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/three"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/decimal"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/zero"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/decimal"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/four"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/one"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/four"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/five"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/two"
        android:layout_toLeftOf="@+id/three"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/five"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/six"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/three"
        android:layout_toLeftOf="@+id/subtract"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/six"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/seven"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/four"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/seven"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/eight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/four"
        android:layout_toRightOf="@+id/four"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/eight"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/nine"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eight"
        android:layout_alignBottom="@+id/eight"
        android:layout_toRightOf="@+id/eight"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/nine"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/divide"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/decimal"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/divide"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/multiply"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nine"
        android:layout_alignBottom="@+id/nine"
        android:layout_alignLeft="@+id/add"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/multiply"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/equal"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/divide"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/equal"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nine"
        android:layout_toRightOf="@+id/nine"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/add"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/subtract"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/equal"
        android:layout_alignLeft="@+id/equal"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/subtract"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/delete"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rightBracket"
        android:layout_alignBottom="@+id/rightBracket"
        android:layout_toRightOf="@+id/rightBracket"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/deleteButton"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/newCalc"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seven"
        android:layout_toLeftOf="@+id/leftBracket"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/newCal"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/leftBracket"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eight"
        android:layout_toLeftOf="@+id/nine"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/leftBracket"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

    <Button
        android:id="@+id/rightBracket"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftBracket"
        android:layout_alignBottom="@+id/leftBracket"
        android:layout_toLeftOf="@+id/multiply"
        android:background="@drawable/button2"
        android:height="85dp"
        android:text="@string/rightBracket"
        android:textColor="@color/whitetext"
        android:textSize="20sp"
        android:width="90dp" />

</RelativeLayout>